--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /__pycache__/
 /.idea/
 theomation.exe
+André Jacinto Rodrigues.txt
+Theo Ravi Cabral Parreiras Riedel.txt
+Lukas Araújo da Silva.txt
