mudado alguns diretorios, para tentar fazer a atualizacao funcionar

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /dist/
 /__pycache__/
 /.idea/
-theomation.exe
+bibs_install.bat
 André Jacinto Rodrigues.txt
 Theo Ravi Cabral Parreiras Riedel.txt
 Lukas Araújo da Silva.txt
