--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /dist/
 /__pycache__/
 /.idea/
+main\theomation.exe
 bibs_install.bat
 André Jacinto Rodrigues.txt
 Theo Ravi Cabral Parreiras Riedel.txt
